--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "npx prisma migrate dev",
     "start": "node dist/server.js",
-    "dev": "fuser -k 4000/tcp ; nodemon src/server.ts"
+    "dev": "fuser -k 4000/tcp ; nodemon src/server.ts",
+    "dev:seed": "npx prisma db seed"
   },
   "keywords": [],
   "author": "",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
