--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "npx prisma migrate dev",
+    "migrate": "npx prisma migrate deploy",
     "start": "node dist/server.js",
     "dev": "fuser -k 4000/tcp ; nodemon src/server.ts",
     "dev:seed": "npx prisma db seed"
